<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_saac_base" >

        <TextView
            android:id="@+id/textViewTitle1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/titleMenuText"
            android:text="@string/titulo_scanform" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_captured"
            style="@style/GenericText"
            android:id="@+id/textViewLabel"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_result"
            style="@style/GenericText"
            android:id="@+id/textViewNumeroContrato"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_capturar"
            style="@style/ButtonText"
            android:background="@drawable/blue_button_shape"
            android:id="@+id/buttonScan" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_guardar"
            style="@style/ButtonText"
            android:background="@drawable/blue_button_shape"
            android:id="@+id/buttonSave" />
    </LinearLayout>
</LinearLayout>