<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_saac_base" >

        <TextView
            android:id="@+id/textViewTitle1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/titleMenuText"
            android:text="@string/titulo_menu" />

    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textViewScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/boton_escanear"
        android:drawableTop="@drawable/bt_br_t2"
        android:drawablePadding="5dp"
        android:padding="15dp"
        android:gravity="center"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/textViewExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:drawableTop="@drawable/bt_rep_t1"
        android:drawablePadding="5dp"
        android:padding="15dp"
        android:gravity="center"
        android:text="@string/boton_exportar"/>
    </LinearLayout>

</LinearLayout>
